Adicionado sistemas de roles.